--- a/packages/platforms/accton/x86-64/wedge100bf-32x/modules/PKG.yml
+++ b/packages/platforms/accton/x86-64/wedge100bf-32x/modules/PKG.yml
@@ -1,1 +1,1 @@
-!include $ONL_TEMPLATES/no-platform-modules.yml ARCH=amd64 VENDOR=accton BASENAME=x86-64-accton-wedge100bf-32x
+!include $ONL_TEMPLATES/no-platform-modules.yml ARCH=amd64 VENDOR=accton BASENAME=x86-64-accton-wedge100bf-32x KERNELS="onl-kernel-4.14-lts-x86-64-all:amd64"
