--- a/setup.env
+++ b/setup.env
@@ -55,6 +55,5 @@ export ONL_SUBMODULE_UPDATED_SCRIPTS="$ONL/tools/scripts/submodule-updated.sh"
 export ONLPM_OPTION_PLATFORM_WHITELIST="\
 x86-64-accton-wedge100bf-32x-r0
 x86-64-accton-wedge100bf-65x-r0
+x86-64-inventec-d5254-r0
 "
-
-export INIT="systemd"
