--- a/setup.env
+++ b/setup.env
@@ -57,5 +57,6 @@ x86-64-accton-as7712-32x-r0
 x86-64-accton-as5812-54x-r0
 x86-64-inventec-d5254-r0
 x86-64-accton-wedge100bf-32x-r0
+x86-64-accton-wedge100bf-65x-r0
 x86-64-accton-as6712-32x-r0
 "
