Add AS7716-24c support

--- a/setup.env
+++ b/setup.env
@@ -59,4 +59,5 @@ x86-64-inventec-d5254-r0
 x86-64-accton-wedge100bf-32x-r0
 x86-64-accton-wedge100bf-65x-r0
 x86-64-accton-as6712-32x-r0
+x86-64-accton-as7716-24sc-r0
 "
