--- a/setup.env
+++ b/setup.env
@@ -60,4 +60,5 @@ x86-64-accton-wedge100bf-32x-r0
 x86-64-accton-wedge100bf-65x-r0
 x86-64-accton-as6712-32x-r0
 x86-64-accton-as7716-24sc-r0
+x86-64-accton-as7716-24xc-r0
 "
