--- a/builds/any/rootfs/stretch/common/all-base-packages.yml
+++ b/builds/any/rootfs/stretch/common/all-base-packages.yml
@@ -78,3 +78,12 @@
 - strace
 - sysstat
 - ipmitool
+- apt-transport-https
+- ca-certificates
+- curl
+- gnupg2
+- software-properties-common
+- libseccomp2
+- iptables
+- dmsetup
+- libdevmapper1.02.1
